avance hasta las 2o

--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
                 En una nueva fecha, los equipos se mostraron con la misma forma y respetaron el andar del campeonato
             </p>
         </section>
-        <section class="container">
-            <img src="./img/Independiente-hizo-un-partido-penoso-y-se-despidio-de-la-Copa-Argentina.jpg" alt="">
+        <section class="fotos">
+            <img src="./img/foto1.jpg" alt="foto1">
+            <img src="./img/foto2.jpg" alt="foto1">
         </section>
         <section>
-            <h1 class="index">
+            <h1 class="parrafo">
                 Nota a Iván Marcone, jugador de la fecha número 22:
             </h1>
             <P>
@@ -54,10 +55,10 @@
         </section>
     </main>
     <footer>
-        <h5 class="index" >
+        <h5 class="foot" >
             hecho con amor y mucha dedicación.
         </h5>
-        <h5 class="index">
+        <h5 class="foot">
             NahueCAI92
         </h5>
     </footer>
