--- a/nosotros.html
+++ b/nosotros.html
@@ -34,21 +34,26 @@
     </header>
     <main class="container">
         <section class="titulo">
-            <h2 class="index__nosotros">
+            <div>
+                <h2 class="index__nosotros">
                 Gracias por visitar nuestra página.
-            </h2>
-            <h1 class="index">
-                Te dejamos informacion de contacto para que estes junto a nosotros y nos ayudes a mejorar
-            </h1>
+                </h2>
+                <h1 class="index">
+                    Te dejamos informacion de contacto para que estes junto a nosotros y nos ayudes a mejorar
+                </h1>
+            </div>
             <div class="contacto__items">
             <li>
-                Mail:
+                <a class="contacto__link" href="Mail">Mail: </a>
             </li>
             <li>
-                Telefono:
+                <a class="contacto__link" href="whatsapp">Telefono/Whatsapp: </a>
             </li>
             <li>
-                Dirección:
+                <a class="contacto__link" href="twitter">Twitter: </a>
+            </li>
+            <li>
+                <a class="contacto__link" href="Instagram">Instagram: </a>
             </li>
             </div>
             
