--- a/fixture.html
+++ b/fixture.html
@@ -41,8 +41,14 @@
     <section>
         <img src="./img/Fixture fecha 8.png" alt="fecha 8">
     </section>
-
 </main>
-
+<footer>
+    <h5 class="foot" >
+        hecho con amor y mucha dedicación.
+    </h5>
+    <h5 class="foot">
+        NahueCAI92
+    </h5>
+</footer>
 </body>
 </html>
