--- a/index.html
+++ b/index.html
@@ -32,18 +32,24 @@
             </ul>
         </nav>
     </header>
-    <main class="container portada">
-        <section>
-            <h1 class="index">
+    <main class="portada">
+        <section class="portada__item">
+            <img class="fotos" src="./img/foto1.jpg" alt="foto1">
+            <h1>
                 Resumen de la fecha número 22 del campeonato argentino
             </h1>
             <p>
                 En una nueva fecha, los equipos se mostraron con la misma forma y respetaron el andar del campeonato
             </p>
         </section>
-        <section class="fotos">
-            <img src="./img/foto1.jpg" alt="foto1">
-            <img src="./img/foto2.jpg" alt="foto1">
+        <section class="portada__item">
+            <img class="fotos" src="./img/foto2.jpg" alt="foto2">
+            <h1>
+                asdnasjfnasn    
+            </h1>
+            <p>
+                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ducimus sapiente, esse odit illo labore excepturi temporibus fuga vero dicta assumenda nam natus pariatur dolore porro quae quibusdam perferendis animi. 
+            </p>    
         </section>
         <section>
             <h1 class="parrafo">
