--- a/noticias.html
+++ b/noticias.html
@@ -40,5 +40,13 @@
             <img src="./img/Tabla.png" alt="posiciones">
         </section>
     </main>
+    <footer>
+        <h5 class="foot" >
+            hecho con amor y mucha dedicación.
+        </h5>
+        <h5 class="foot">
+            NahueCAI92
+        </h5>
+    </footer>
 </body>
 </html>
