--- a/equipos.html
+++ b/equipos.html
@@ -49,5 +49,13 @@
             </caption>
         </section>
     </main>
+    <footer>
+        <h5 class="foot" >
+            hecho con amor y mucha dedicación.
+        </h5>
+        <h5 class="foot">
+            NahueCAI92
+        </h5>
+    </footer>
 </body>
 </html>
