--- a/fixture.html
+++ b/fixture.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fixture</title>
+    <link rel="stylesheet" href="./bootstrap.css">
     <link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
     <header>
@@ -32,7 +34,7 @@
             </ul>
         </nav>
     </header>
-<main class="container">
+    <main class="container">
     <section>
         <h2>
             Fixture de la fecha N° 8:
@@ -41,14 +43,16 @@
     <section>
         <img src="./img/Fixture fecha 8.png" alt="fecha 8">
     </section>
-</main>
-<footer>
-    <h5 class="foot" >
-        hecho con amor y mucha dedicación.
-    </h5>
-    <h5 class="foot">
-        NahueCAI92
-    </h5>
-</footer>
+    <footer>
+        <h5 class="foot" >
+            hecho con amor y mucha dedicación.
+        </h5>
+        <h5 class="foot">
+            NahueCAI92
+        </h5>
+    </footer>
+    </main>
+    <script src="./js/bootstrap.bundle.js"></script>
+
 </body>
 </html>
