--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>inicio</title>
+    <link rel="stylesheet" href="./bootstrap.css">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -34,7 +35,7 @@
     </header>
     <main class="portada">
         <section class="portada__item">
-            <img class="fotos" src="./img/foto1.jpg" alt="foto1">
+            <img class="fotos"gi src="./img/foto1.jpg" alt="foto1">
             <h1>
                 Resumen de la fecha número 22 del campeonato argentino
             </h1>
@@ -59,14 +60,15 @@
                 Vamos a modificar esto apra que quede imagen y al lado foto
             </P>
         </section>
+        <footer>
+            <h5 class="foot" >
+                hecho con amor y mucha dedicación.
+            </h5>
+            <h5 class="foot">
+                NahueCAI92
+            </h5>
+        </footer>
     </main>
-    <footer>
-        <h5 class="foot" >
-            hecho con amor y mucha dedicación.
-        </h5>
-        <h5 class="foot">
-            NahueCAI92
-        </h5>
-    </footer>
+    <script src="./js/bootstrap.bundle.js"></script>
 </body>
 </html>
