--- a/nosotros.html
+++ b/nosotros.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros</title>
+    <link rel="stylesheet" href="./bootstrap.css">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -27,7 +28,7 @@
                     <a class="menu__link" href="noticias.html">Noticias</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="nosotros.html">Nosotros</a>
+                    <a class="menu__link" href="Nosotros.html">Nosotros</a>
                 </li>
             </ul>
         </nav>
@@ -55,10 +56,8 @@
             <li>
                 <a class="contacto__link" href="Instagram">Instagram: </a>
             </li>
-            </div>
-            
+            </div>            
         </section>
-
     </main>
 </body>
 </html>
