--- a/equipos.html
+++ b/equipos.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>equipos</title>
+    <link rel="stylesheet" href="./bootstrap.css">
     <link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
     <header>
@@ -48,14 +50,15 @@
                 </p>
             </caption>
         </section>
+        <footer>
+            <h5 class="foot" >
+                hecho con amor y mucha dedicación.
+            </h5>
+            <h5 class="foot">
+                NahueCAI92
+            </h5>
+        </footer>
     </main>
-    <footer>
-        <h5 class="foot" >
-            hecho con amor y mucha dedicación.
-        </h5>
-        <h5 class="foot">
-            NahueCAI92
-        </h5>
-    </footer>
-</body>
+    <script src="./js/bootstrap.bundle.js"></script>
+</body>   
 </html>
