--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>inicio</title>
     <link rel="stylesheet" href="./bootstrap.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
@@ -35,7 +35,7 @@
     </header>
     <main class="portada">
         <section class="portada__item">
-            <img class="fotos"gi src="./img/foto1.jpg" alt="foto1">
+            <img class="fotos" src="./img/foto1.jpg" alt="foto1">
             <h1>
                 Resumen de la fecha número 22 del campeonato argentino
             </h1>
@@ -46,14 +46,14 @@
         <section class="portada__item">
             <img class="fotos" src="./img/foto2.jpg" alt="foto2">
             <h1>
-                asdnasjfnasn    
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptate quidem molestiae ex, exercitationem modi distinctio omnis mollitia, eius veritatis ducimus quam laborum repudiandae hic, adipisci consectetur voluptas dolorem iste    
             </h1>
             <p>
                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ducimus sapiente, esse odit illo labore excepturi temporibus fuga vero dicta assumenda nam natus pariatur dolore porro quae quibusdam perferendis animi. 
             </p>    
         </section>
         <section>
-            <h1 class="parrafo">
+            <h1>
                 Nota a Iván Marcone, jugador de la fecha número 22:
             </h1>
             <P>
