--- a/nosotros.html
+++ b/nosotros.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros</title>
     <link rel="stylesheet" href="./bootstrap.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
@@ -34,29 +34,15 @@
         </nav>
     </header>
     <main class="container">
-        <section class="titulo">
+        <section>
             <div>
-                <h2 class="index__nosotros">
+                <h2>
                 Gracias por visitar nuestra página.
                 </h2>
-                <h1 class="index">
+                <h1>
                     Te dejamos informacion de contacto para que estes junto a nosotros y nos ayudes a mejorar
                 </h1>
-            </div>
-            <div class="contacto__items">
-            <li>
-                <a class="contacto__link" href="Mail">Mail: </a>
-            </li>
-            <li>
-                <a class="contacto__link" href="whatsapp">Telefono/Whatsapp: </a>
-            </li>
-            <li>
-                <a class="contacto__link" href="twitter">Twitter: </a>
-            </li>
-            <li>
-                <a class="contacto__link" href="Instagram">Instagram: </a>
-            </li>
-            </div>            
+                     
         </section>
     </main>
 </body>
