nav listo sin fixture que queda chico

--- a/equipos.html
+++ b/equipos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>equipos</title>
-    <link rel="stylesheet" href="./bootstrap.css">
+    <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/style.css">
 
 </head>
@@ -29,13 +29,13 @@
                     <a class="menu__link" href="noticias.html">Noticias</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="Nosotros.html">Nosotros</a>
+                    <a class="menu__link" href="nosotros.html">Nosotros</a>
                 </li>
             </ul>
         </nav>
     </header>
     <main class="container">
-        <section class="titulo">
+        <section>
             <h2>
                 TODOS LOS EQUIPOS DE LA L.P.F
             </h2>
