--- a/nosotros.html
+++ b/nosotros.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros</title>
-    <link rel="stylesheet" href="./bootstrap.css">
+    <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -28,7 +28,7 @@
                     <a class="menu__link" href="noticias.html">Noticias</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="Nosotros.html">Nosotros</a>
+                    <a class="menu__link" href="nosotros.html">Nosotros</a>
                 </li>
             </ul>
         </nav>
@@ -42,7 +42,8 @@
                 <h1>
                     Te dejamos informacion de contacto para que estes junto a nosotros y nos ayudes a mejorar
                 </h1>
-                     
+                <img src="./img/Cabeza de posiciones.png" alt="posiciones">
+                <img src="./img/Cabeza de posiciones.png" alt="posiciones">
         </section>
     </main>
 </body>
