--- a/fixture.html
+++ b/fixture.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fixture</title>
-    <link rel="stylesheet" href="./bootstrap.css">
+    <title>inicio</title>
+    <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/style.css">
-
 </head>
 <body>
     <header>
@@ -29,7 +28,7 @@
                     <a class="menu__link" href="noticias.html">Noticias</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="Nosotros.html">Nosotros</a>
+                    <a class="menu__link" href="nosotros.html">Nosotros</a>
                 </li>
             </ul>
         </nav>
