a apartir de este sumar sass

--- a/fixture.html
+++ b/fixture.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fixture</title>
-    <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -28,30 +28,21 @@
                     <a class="menu__link" href="noticias.html">Noticias</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="nosotros.html">Nosotros</a>
+                    <a class="menu__link" href="nosotros.html">Afa</a>
                 </li>
             </ul>
         </nav>
     </header>
     <main class="container">
-    <section>
-        <h2>
+        <section>
+            <h2>
             Fixture de la fecha N° 8:
-        </h2>
-    </section>
-    <section>
-        <img src="./img/Fixture fecha 8.png" alt="fecha 8">
-    </section>
-    <footer>
-        <h5 class="foot" >
-            hecho con amor y mucha dedicación.
-        </h5>
-        <h5 class="foot">
-            NahueCAI92
-        </h5>
-    </footer>
-    </main>
-    <script src="./js/bootstrap.bundle.js"></script>
+            </h2>
+        </section>
+        <section>
+            <img src="./img/Fixture fecha 8.png" alt="fecha 8">
+        </section>
 
+    </main>
 </body>
 </html>
