--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-    <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -33,7 +33,7 @@
             </ul>
         </nav>
     </header>
-    <main class="portada">
+    <main class="portada container">
         <section class="portada__item">
             <img class="fotos" src="./img/foto1.jpg" alt="foto1">
             <h1>
