--- a/equipos.html
+++ b/equipos.html
@@ -35,20 +35,101 @@
     </header>
     <main class="container">
         <section>
-            <h2>
-                TODOS LOS EQUIPOS DE LA L.P.F
-            </h2>
+                <h2 class="titulos">
+                    TODOS LOS EQUIPOS DE LA L.P.F
+                </h2>
         </section>
-        <section>
-            <img src="./img/escudos-seleccionar.png" alt="Link a info por club">
+        <section class="row">
+            <div class="col">
+                <img class="escudos" src="./img/escudos-seleccionar.png" alt="Link a info por club">
+            </div>
+            <ul class="col fondo__negro">
+                <li class="menu__item ">
+                    <a class="menu__link" href="#Aldosivi">Aldosivi</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#Argentinos">Argentinos Jrs</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#arsenal">Arsenal de Sarandí</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#atletico">Atlético Tucumán</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#Banfield">Banfield</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#Barracas Central">Barracas Central</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#Boca Jrs">Boca Jrs</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#Central Cordoba">Central Cordoba</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#Colon de Sta. Fe">Colon de Sta. Fe</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#Defensa y Justicia">Defensa y Justicia</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#Estudiantes de L.P.">Estudiantes de L.P.</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#Gimnasia de L.P.">Gimnasia de L.P.</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#Godoy Cruz">Godoy Cruz</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#Huracán">Huracán</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#Independiente">Independiente</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#Lanús">Lanús</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#Newells Old Boys">Newells Old Boys</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#Platense">Platense</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#Racing CLub">Racing CLub</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#River Plate">River Plate</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#Rosario Central">Rosario Central</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#Sarmiento de Junín">Sarmiento de Junín</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#Talleres">Talleres</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#Tigre">Tigre</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#Union de Sta. Fe">Union de Sta. Fe</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#Velez Sarsfield">Velez Sarsfield</a>
+                </li>
+            </ul>
+           
         </section>
-        <section>
             <caption>
                 <p>
                     Selecciona un equipo para mas información de tu equipo
                 </p>
             </caption>
-        </section>
         <footer>
             <h5 class="foot" >
                 hecho con amor y mucha dedicación.
