--- a/index.html
+++ b/index.html
@@ -33,33 +33,30 @@
             </ul>
         </nav>
     </header>
-    <main class="portada container">
-        <section class="portada__item">
-            <img class="fotos" src="./img/foto1.jpg" alt="foto1">
-            <h1>
+    <main class="container">
+        <section class="row">
+            <img class="col" src="./img/foto1.jpg" alt="foto1">
+            <div class="col">  
+                <h1>
                 Resumen de la fecha número 22 del campeonato argentino
-            </h1>
-            <p>
+                </h1>
+                <p>
                 En una nueva fecha, los equipos se mostraron con la misma forma y respetaron el andar del campeonato
-            </p>
+                </p>
+            </div>
         </section>
-        <section class="portada__item">
-            <img class="fotos" src="./img/foto2.jpg" alt="foto2">
-            <h1>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptate quidem molestiae ex, exercitationem modi distinctio omnis mollitia, eius veritatis ducimus quam laborum repudiandae hic, adipisci consectetur voluptas dolorem iste    
-            </h1>
-            <p>
-                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ducimus sapiente, esse odit illo labore excepturi temporibus fuga vero dicta assumenda nam natus pariatur dolore porro quae quibusdam perferendis animi. 
-            </p>    
+        <section class="row">
+            <img class="col" src="./img/foto2.jpg" alt="foto2">
+            <div class="col">
+                <h1>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptate quidem molestiae ex, exercitationem modi distinctio omnis mollitia, eius veritatis ducimus quam laborum repudiandae hic, adipisci consectetur voluptas dolorem iste    
+                </h1>
+                <p>
+                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ducimus sapiente, esse odit illo labore excepturi temporibus fuga vero dicta assumenda nam natus pariatur dolore porro quae quibusdam perferendis animi. 
+                </p>    
+            </div>
         </section>
-        <section>
-            <h1>
-                Nota a Iván Marcone, jugador de la fecha número 22:
-            </h1>
-            <P>
-                Vamos a modificar esto apra que quede imagen y al lado foto
-            </P>
-        </section>
+       
         <footer>
             <h5 class="foot" >
                 hecho con amor y mucha dedicación.
