--- a/nosotros.html
+++ b/nosotros.html
@@ -35,15 +35,13 @@
     </header>
     <main class="container">
         <section>
-            <div>
-                <h2>
+            <div class="titulos container">
+                <h2 class="col">
                 Gracias por visitar nuestra página.
                 </h2>
-                <h1>
+                <h2 class="col">
                     Te dejamos informacion de contacto para que estes junto a nosotros y nos ayudes a mejorar
-                </h1>
-                <img src="./img/Cabeza de posiciones.png" alt="posiciones">
-                <img src="./img/Cabeza de posiciones.png" alt="posiciones">
+                </h2>
         </section>
     </main>
 </body>
