--- a/fixture.html
+++ b/fixture.html
@@ -7,6 +7,7 @@
     <title>Fixture</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
+    
 </head>
 <body>
     <header>
@@ -28,19 +29,19 @@
                     <a class="menu__link" href="noticias.html">Noticias</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="nosotros.html">Afa</a>
+                    <a class="menu__link" href="nosotros.html">Nosotros</a>
                 </li>
             </ul>
         </nav>
     </header>
     <main class="container">
-        <section>
+        <section class="row">    
             <h2>
             Fixture de la fecha N° 8:
             </h2>
-        </section>
-        <section>
-            <img src="./img/Fixture fecha 8.png" alt="fecha 8">
+            <div>
+                <img class="escudos" src="./img/Fixture fecha 8.png" alt="fecha 8"> 
+            </div>
         </section>
 
     </main>
