--- a/index.html
+++ b/index.html
@@ -56,16 +56,17 @@
                 </p>    
             </div>
         </section>
-       
+    </main>       
         <footer>
-            <h5 class="foot" >
-                hecho con amor y mucha dedicación.
-            </h5>
-            <h5 class="foot">
-                NahueCAI92
-            </h5>
-        </footer>
-    </main>
+            <div class="foot">
+                <h4>
+                    Hecho con amor y mucha dedicación.
+                </h4>
+                <h4>
+                    NahueCAI92.
+                </h4>
+            </div>
+        </footer>    
     <script src="./js/bootstrap.bundle.js"></script>
 </body>
 </html>
