--- a/equipos.html
+++ b/equipos.html
@@ -129,16 +129,18 @@
                 <p>
                     Selecciona un equipo para mas información de tu equipo
                 </p>
-            </caption>
-        <footer>
-            <h5 class="foot" >
-                hecho con amor y mucha dedicación.
-            </h5>
-            <h5 class="foot">
-                NahueCAI92
-            </h5>
-        </footer>
+            </caption>       
     </main>
+    <footer>
+        <div class="foot">
+            <h4>
+                Hecho con amor y mucha dedicación.
+            </h4>
+            <h4>
+                NahueCAI92.
+            </h4>
+        </div>
+    </footer>
     <script src="./js/bootstrap.bundle.js"></script>
 </body>   
 </html>
