--- a/nosotros.html
+++ b/nosotros.html
@@ -44,5 +44,16 @@
                 </h2>
         </section>
     </main>
+    <footer>
+        <div class="foot">
+            <h4>
+              Hecho con amor y mucha dedicación.
+            </h4>
+            <h4>
+                NahueCAI92.
+            </h4>
+        </div>
+    </footer>
+    <script src="./js/bootstrap.bundle.js"></script>
 </body>
 </html>
