--- a/noticias.html
+++ b/noticias.html
@@ -40,15 +40,17 @@
         <section>
             <img src="./img/Tabla.png" alt="posiciones">
         </section>
-        <footer>
-            <h5 class="foot" >
-                hecho con amor y mucha dedicación.
-            </h5>
-            <h5 class="foot">
-                NahueCAI92
-            </h5>
-        </footer>
     </main>
+    <footer>
+        <div class="foot">
+            <h4>
+              Hecho con amor y mucha dedicación.
+            </h4>
+            <h4>
+                NahueCAI92.
+            </h4>
+        </div>
+    </footer>
     <script src="./js/bootstrap.bundle.js"></script>
 </body>
 </html>
