todo listo para SASS

--- a/equipos.html
+++ b/equipos.html
@@ -40,7 +40,7 @@
                 </h2>
         </section>
         <section class="row">
-            <div class="col">
+            <div class="col centro">
                 <img class="escudos" src="./img/escudos-seleccionar.png" alt="Link a info por club">
             </div>
             <ul class="col fondo__negro">
