--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     </header>
     <main class="container">
         <section class="row">
-            <img class="col" src="./img/foto1.jpg" alt="foto1">
-            <div class="col">  
+            <img class="col margen" src="./img/foto1.jpg" alt="foto1">
+            <div class="col margen">  
                 <h1>
                 Resumen de la fecha número 22 del campeonato argentino
                 </h1>
@@ -46,8 +46,8 @@
             </div>
         </section>
         <section class="row">
-            <img class="col" src="./img/foto2.jpg" alt="foto2">
-            <div class="col">
+            <img class="col margen" src="./img/foto2.jpg" alt="foto2">
+            <div class="col margen">
                 <h1>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptate quidem molestiae ex, exercitationem modi distinctio omnis mollitia, eius veritatis ducimus quam laborum repudiandae hic, adipisci consectetur voluptas dolorem iste    
                 </h1>
