--- a/nosotros.html
+++ b/nosotros.html
@@ -43,7 +43,30 @@
                     Te dejamos informacion de contacto para que estes junto a nosotros y nos ayudes a mejorar
                 </h2>
         </section>
+        <section>
+            <form action="/my-handling-form-page" method="post">
+                <ul>
+                 <li>
+                   <label for="name">Nombre: </label>
+                   <input type="text" id="name" name="user_name">coloque su usuario
+                 </li>
+                 <li>
+                   <label for="mail">Correo: </label>
+                   <input type="email" id="mail" name="user_mail">coloque mail
+                 </li>
+                 <li>
+                   <label for="msg">Mensaje: </label>
+                   <textarea id="msg" name="user_message"></textarea>escriba aqui
+                 </li>
+                </ul>
+                <u>
+                    <button type="text" name="aplicar" id="#enviar">enviar
+                </u>
+               </form>
+               
+        </section>
     </main>
+
     <footer>
         <div class="foot">
             <h4>
