--- a/noticias.html
+++ b/noticias.html
@@ -34,8 +34,9 @@
         </nav>
     </header>
     <main class="container">
-        <section>
-            <img src="./img/Cabeza de posiciones.png" alt="posiciones">
+        <section class="menu__item">
+            <img class="escudos__noticias" src="./img/Cabeza de posiciones.png" alt="posiciones">
+            <img class="escudos__noticias" src="./img/logo.png" alt="posiciones">
         </section>
         <section>
             <img src="./img/Tabla.png" alt="posiciones">
