actualizado de pag, falta sass

--- a/index.html
+++ b/index.html
@@ -41,23 +41,43 @@
                 Resumen de la fecha número 22 del campeonato argentino
                 </h1>
                 <p>
-                En una nueva fecha, los equipos se mostraron con la misma forma y respetaron el andar del campeonato
+                En una nueva fecha, los equipos se mostraron con la misma forma y respetaron el andar del campeonato Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab natus, dolorum neque quibusdam, enim incidunt dolore esse veniam officia alias iusto ipsum amet corrupti voluptates veritatis dolores ipsam similique odio!
                 </p>
             </div>
         </section>
+        <div>
+            <hr>
+        </div>
         <section class="row">
             <img class="col margen" src="./img/foto2.jpg" alt="foto2">
             <div class="col margen">
                 <h1>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptate quidem molestiae ex, exercitationem modi distinctio omnis mollitia, eius veritatis ducimus quam laborum repudiandae hic, adipisci consectetur voluptas dolorem iste    
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptate quidem molestiae ex, exercitationem modi distinctio omnis mollitia, eius veritatis ducimus quam laborum repudiandae hic, adipisci consectetur voluptas dolorem iste  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum amet omnis id sit minima veniam, animi nostrum quam totam voluptate vel ratione perferendis saepe. Error et eum quod eius cum.  
                 </h1>
                 <p>
-                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ducimus sapiente, esse odit illo labore excepturi temporibus fuga vero dicta assumenda nam natus pariatur dolore porro quae quibusdam perferendis animi. 
+                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ducimus sapiente, esse odit illo labore excepturi temporibus fuga vero dicta assumenda nam natus pariatur dolore porro quae quibusdam perferendis animi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos iure voluptatum aliquam, expedita maiores ipsum quod magnam earum perspiciatis atque quae sequi. Perspiciatis consequuntur qui recusandae ea provident, animi laboriosam?
+                </p>    
+            </div>
+        </section>
+        <div>
+            <hr>
+        </div>
+        <section class="row">
+            <img class="col margen" src="./img/foto3.jpg" alt="foto2">
+            <div class="col margen">
+                <h1>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptate quidem molestiae ex, exercitationem modi distinctio omnis mollitia, eius veritatis ducimus quam laborum repudiandae hic, adipisci consectetur voluptas dolorem iste  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum amet omnis id sit minima veniam, animi nostrum quam totam voluptate vel ratione perferendis saepe. Error et eum quod eius cum.  
+                </h1>
+                <p>
+                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ducimus sapiente, esse odit illo labore excepturi temporibus fuga vero dicta assumenda nam natus pariatur dolore porro quae quibusdam perferendis animi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos iure voluptatum aliquam, expedita maiores ipsum quod magnam earum perspiciatis atque quae sequi. Perspiciatis consequuntur qui recusandae ea provident, animi laboriosam?
                 </p>    
             </div>
         </section>
     </main>       
         <footer>
+            <div>
+                <hr>
+            </div>
             <div class="foot">
                 <h4>
                     Hecho con amor y mucha dedicación.
