--- a/noticias.html
+++ b/noticias.html
@@ -43,6 +43,9 @@
         </section>
     </main>
     <footer>
+        <div>
+            <hr>
+        </div>
         <div class="foot">
             <h4>
               Hecho con amor y mucha dedicación.
