--- a/equipos.html
+++ b/equipos.html
@@ -132,6 +132,9 @@
             </caption>       
     </main>
     <footer>
+        <div>
+            <hr>
+        </div>
         <div class="foot">
             <h4>
                 Hecho con amor y mucha dedicación.
