--- a/fixture.html
+++ b/fixture.html
@@ -35,16 +35,52 @@
         </nav>
     </header>
     <main class="container">
-        <section class="row">    
-            <h2>
+        <div>
+            <h1 class="titulos">
+                Fechas del campeonato:
+            </h1>
+            <hr>
+        </div>
+        <section id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./img/fecha2.jpg" class="d-block w-100" alt="fecha 1">
+              </div>
+              <div class="carousel-item">
+                <img src="./img/fecha3.webp" class="d-block w-100" alt="fecha 8">
+              </div>
+              <div class="carousel-item">
+                <img src="./img/Fixture fecha 8.png" class="d-block w-100" alt="fecha 25">
+              </div>
+              <div class="carousel-item">
+                <img src="./img/fecha25.jpg" class="d-block w-100" alt="fecha 25">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previo</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Siguiente</span>
+            </button>
+        </section>
+        <!-- <section class="row">    
+            <h2 class="titulos col">
             Fixture de la fecha N° 8:
             </h2>
             <div>
-                <img class="escudos" src="./img/Fixture fecha 8.png" alt="fecha 8"> 
+                <img class="escudos, centro" src="./img/Fixture fecha 8.png" alt="fecha 8"> 
             </div>
         </section>
 
-    </main>
+    </main> -->
     <footer>
         <div class="foot">
             <h4>
