--- a/nosotros.html
+++ b/nosotros.html
@@ -68,6 +68,9 @@
     </main>
 
     <footer>
+        <div>
+            <hr>
+        </div>
         <div class="foot">
             <h4>
               Hecho con amor y mucha dedicación.
