actualizado para SASS

--- a/nosotros.html
+++ b/nosotros.html
@@ -25,7 +25,7 @@
                     <a class="menu__link" href="fixture.html">Fixture</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="noticias.html">Noticias</a>
+                    <a class="menu__link" href="posiciones.html">Noticias</a>
                 </li>
                 <li class="menu__item">
                     <a class="menu__link" href="nosotros.html">Nosotros</a>
@@ -36,33 +36,33 @@
     <main class="container">
         <section>
             <div class="titulos container">
-                <h2 class="col">
+                <h2>
                 Gracias por visitar nuestra página.
+                <hr>
                 </h2>
-                <h2 class="col">
-                    Te dejamos informacion de contacto para que estes junto a nosotros y nos ayudes a mejorar
-                </h2>
+            </div>    
         </section>
         <section>
             <form action="/my-handling-form-page" method="post">
                 <ul>
                  <li>
-                   <label for="name">Nombre: </label>
-                   <input type="text" id="name" name="user_name">coloque su usuario
+                   <label for="name">Nombre:</label>
+                   <input type="text" id="name" name="user_name">
                  </li>
                  <li>
-                   <label for="mail">Correo: </label>
-                   <input type="email" id="mail" name="user_mail">coloque mail
+                   <label for="mail">Correo :</label>
+                   <input type="email" id="mail" name="user_mail">
                  </li>
                  <li>
-                   <label for="msg">Mensaje: </label>
-                   <textarea id="msg" name="user_message"></textarea>escriba aqui
+                   <label for="msg">Mensaje:</label>
+                   <textarea id="msg" name="user_message"></textarea>
                  </li>
+                 <li class="button">
+                    <button type="submit">Envíe su mensaje</button>
+                </li>              
                 </ul>
-                <u>
-                    <button type="text" name="aplicar" id="#enviar">enviar
-                </u>
                </form>
+               
                
         </section>
     </main>
