--- a/posiciones.html
+++ b/posiciones.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Noticias</title>
+    <title>Posiciones</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -25,7 +25,7 @@
                     <a class="menu__link" href="fixture.html">Fixture</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="noticias.html">Noticias</a>
+                    <a class="menu__link" href="posiciones.html">Noticias</a>
                 </li>
                 <li class="menu__item">
                     <a class="menu__link" href="nosotros.html">Nosotros</a>
